Added notebooks, slight changes in the slides.

--- a/notebooks/03_fcnn_mnist.ipynb
+++ b/notebooks/03_fcnn_mnist.ipynb
@@ -450,19 +450,21 @@
    },
    "source": [
     "#### Exercise  \n",
-    "What do you observe when you compare the network with the hidden layers to the one without?  \n",
+    "\n",
+    "What do you observe when you compare the network with the hidden layers to the one without? This is a typical question, you encounter in practive: which model is the best model.\n",
     "  \n",
-    "Try to improve the fcNN by adding more hidden layers and/or changing the activation function from \"sigmoid\" to \"relu\". What do you observe? \n"
+    "Take notes of the observed performance and try to improve the fcNN by: \n",
+    "\n",
+    "1. changing the activation function from \"sigmoid\" to \"relu\".\n",
+    "2. Do a second run and compare the results\n",
+    "2. Do a longer training.\n",
+    "3. If time permits: Adding more hidden layers and/or  What do you observe? "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "6qUgfXcshaZY"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
